[gd_scene load_steps=6 format=3 uid="uid://bo8bsjbick1ye"]

[ext_resource type="Script" path="res://entities/player/player_controller/frog_leg.gd" id="1_rudlw"]
[ext_resource type="Texture2D" uid="uid://cmge177v0cjl2" path="res://entities/player/limbs/sprites/frog_leg_open.png" id="2_qttw2"]
[ext_resource type="Texture2D" uid="uid://cus74rs3i67rh" path="res://entities/player/limbs/sprites/frog_left_closed.png" id="3_1pt4g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krp0j"]
size = Vector2(52, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_8urj2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qttw2")
}],
"loop": false,
"name": &"active",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1pt4g")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="FrogLeg" type="CollisionShape2D" groups=["can_hold_limb", "limb"]]
position = Vector2(-24, -1)
shape = SubResource("RectangleShape2D_krp0j")
script = ExtResource("1_rudlw")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-32, 0)
target_position = Vector2(-120, 2.08165e-12)
hit_from_inside = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
rotation = 1.5708
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_8urj2")
animation = &"active"
autoplay = "default"
offset = Vector2(0.71, 12.78)

[node name="AttatchmentPoint" type="Node2D" parent="."]
position = Vector2(-32, 0)

[node name="TriggerChildrenDelay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
